fixed search box width on mobile

--- a/src/styles/components/heading.scss
+++ b/src/styles/components/heading.scss
@@ -29,6 +29,8 @@
 }
 .search {
   padding-top: 4%;
+  width: 60%;
+
   .loc-btn {
     background-color: rgba(255, 255, 255, 0);
     border: none;
